--- a/Joon_Models.ipynb
+++ b/Joon_Models.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false
    },
@@ -17,49 +17,139 @@
     {
      "data": {
       "text/plain": [
-       "(3000, 1000)"
+       "(4189, 1001)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Playground\n",
-    "data.shape\n",
-    "trainingX.shape\n"
+    "data.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 54,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from sklearn.linear_model import Ridge\n",
+    "%matplotlib inline\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
-    "# Load training and test data\n",
+    "# Load training and test data (80/20 Split)\n",
     "data = np.loadtxt(\"training_data.txt\", delimiter=\"|\", skiprows=1)\n",
-    "trainingX = data[0:3000, 0:-1]\n",
-    "trainingY = data[0:3000, -1]\n",
+    "dataX = data[:, 0:-1]\n",
+    "dataY = data[:, -1]\n",
+    "training_size = int(data.shape[0] * 0.8)\n",
     "\n",
-    "testX = data[3000:, 0:-1]\n",
-    "testY = data[3000:, -1]\n",
+    "trainingX = data[0:training_size, 0:-1]\n",
+    "trainingY = data[0:training_size, -1]\n",
     "\n",
+    "testX = data[training_size:, 0:-1]\n",
+    "testY = data[training_size:, -1]\n",
     "\n",
+    "# For testing for submission\n",
     "\n",
-    "\n"
+    "test_data = np.loadtxt(\"testing_data.txt\", delimiter=\"|\", skiprows=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Ridge Regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RidgeClassifierCV(alphas=array([  1.00000e-01,   2.00000e-01, ...,   9.99800e+02,   9.99900e+02]),\n",
+       "         class_weight=None, cv=None, fit_intercept=True, normalize=False,\n",
+       "         scoring=None)"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Fit Model\n",
+    "from sklearn.linear_model import RidgeClassifierCV\n",
+    "\n",
+    "# lambdas \n",
+    "lambdas_arr = np.arange(0.1, 1000, 0.1)\n",
+    "\n",
+    "clf = RidgeClassifierCV(alphas=lambdas_arr)\n",
+    "clf.fit(dataX, dataY)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.714115189496\n",
+      "778.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print clf.score(trainingX, trainingY)\n",
+    "print clf.alpha_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Ridge Prediction\n",
+    "prediction = clf.predict(test_data)\n",
+    "\n",
+    "f = open(\"RidgeCV.csv\", \"w\")\n",
+    "f.write(\"Id,Prediction\\n\")\n",
+    "for x in range(len(prediction)):\n",
+    "    f.write(str(x+1) + \",\" + str(int(prediction[x])) + \"\\n\")\n",
+    "f.close()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
    },
    "outputs": [],
    "source": []
@@ -71,23 +161,7 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "# For testing for submission\n",
-    "\n",
-    "test_data = np.loadtxt(\"testing_data.txt\", delimiter=\"|\", skiprows=1)\n",
-    "\n",
-    "# Stochastic Gradient Descent\n",
-    "l, p = \"modified_huber\", \"l2\" # Optimal choices\n",
-    "clf_test = SGDClassifier(loss=l, penalty=p)\n",
-    "clf_test.fit(trainingX, trainingY)\n",
-    "prediction = clf.predict(test_data)\n",
-    "\n",
-    "f = open(\"results.csv\", \"w\")\n",
-    "f.write(\"Id,Prediction\\n\")\n",
-    "for x in range(len(prediction)):\n",
-    "    f.write(str(x+1) + \",\" + str(int(prediction[x])) + \"\\n\")\n",
-    "f.close()"
-   ]
+   "source": []
   }
  ],
  "metadata": {
