--- a/Joon_Models.ipynb
+++ b/Joon_Models.ipynb
@@ -137,22 +137,22 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# AdaBoost"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 102,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.ensemble import AdaBoostClassifier"
+   ]
   },
   {
    "cell_type": "code",
