--- a/Joon_Models.ipynb
+++ b/Joon_Models.ipynb
@@ -68,54 +68,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 108,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "RidgeClassifierCV(alphas=array([  1.00000e-01,   2.00000e-01, ...,   9.99800e+02,   9.99900e+02]),\n",
-       "         class_weight=None, cv=None, fit_intercept=True, normalize=False,\n",
-       "         scoring=None)"
-      ]
-     },
-     "execution_count": 82,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Fit Model\n",
     "from sklearn.linear_model import RidgeClassifierCV\n",
     "\n",
     "# lambdas \n",
-    "lambdas_arr = np.arange(0.1, 1000, 0.1)\n",
+    "lambdas_arr = np.arange(500, 1000, 0.1)\n",
     "\n",
-    "clf = RidgeClassifierCV(alphas=lambdas_arr)\n",
-    "clf.fit(dataX, dataY)"
+    "#clf = RidgeClassifierCV(alphas=lambdas_arr, cv=5)\n",
+    "#clf.fit(dataX, dataY)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 110,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.714115189496\n",
-      "778.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print clf.score(trainingX, trainingY)\n",
-    "print clf.alpha_"
+    "#print clf.score(trainingX, trainingY)\n",
+    "#print clf.alpha_"
    ]
   },
   {
@@ -140,18 +118,116 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# AdaBoost"
+    "# AdaBoost (Decision Tree)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 149,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [],
    "source": [
-    "from sklearn.ensemble import AdaBoostClassifier"
+    "from sklearn.ensemble import AdaBoostClassifier, RandomForestClassifier\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "\n",
+    "training_arr = []\n",
+    "test_arr = []\n",
+    "estimator_arr = range(200, 1000, 10)\n",
+    "\n",
+    "for i in estimator_arr:\n",
+    "    ada = AdaBoostClassifier(n_estimators=i, learning_rate=1)\n",
+    "    ada.fit(trainingX, trainingY)\n",
+    "    training_arr.append(ada.score(trainingX, trainingY))\n",
+    "    test_arr.append(ada.score(testX, testY))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAYQAAAD7CAYAAABqvuNzAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAIABJREFUeJzt3Xd4VGXax/Hvg4gVQVoEBUXAQlVQLIjGBQF7WZUgIqKw\nuLs2fHWR1V1Q1wIoIhZQFLAEFZASOzWgoBAFJCChhg4BQigCgUzmfv84A0kkkEwyyUyS3+e6zpWZ\nU++ZJOc+52nHmRkiIiLlwh2AiIhEBiUEEREBlBBERCRACUFERAAlBBERCVBCEBERAMqHO4BDnHNq\n/yoiEiQzc6HaV0TdIZhZRE99+/YNewyKU3EqTsV5aAq1iEoIIiISPkoIIiICKCEEJTo6Otwh5Ivi\nDC3FGVqKM3K5oiiHKgjnnEVKLCIiJYFzDiutlcoiIhI+SggiIgLkMyE45zo455Kcc8udc71zWX6a\ncy7OObfQOZfonLs/27I1zrnfnHMLnHPzQhi7iIiEUJ51CM65csByoA2wCUgAYswsKds6fYDTzKyP\nc64asAyIMjOfc2410MLM0vI4juoQRESCEI46hJbACjNba2YZwGfArX9ax4CKgdcVgVQz8wXeu3we\nR0REwig/J+ozgfXZ3m8IzMvuLaChc24T8BvwWLZlBkxxziU453oUJlgRESk6oRrLqD2wwMz+4pyr\nh5cAmprZH0ArM9vsnKsemL/UzH7MbSf9+vU7/Do6OrpMtgMWETma+Ph44uPji2z/+alDuBzoZ2Yd\nAu+fBszM+mdb5yvgZTObHXg/DehtZr/8aV99gT1mNiiX46gOQUQkCOGoQ0gA6jvnznbOVQBigLg/\nrbMWaBsIMAo4D1jtnDvZOXdqYP4pQDtgcaiCFxGR0MmzyMjMMp1zDwOT8RLIB2a21DnX01ts7wH/\nA0Y55xYFNvuXme1wztUFJgSGti4PxJrZ5KL5KCIiUhgaukJEpITS0BUiIlIklBBERARQQhARkQAl\nBBERAZQQREQkQAlBRESA0A1dISIiQdi61ftZtSocd1x4YzlECUFEpJDM4I8/cs478UQ4/vgj183M\nhAEDvKl8edi5E6pUgRo1oEEDaNIka3IOEhNh0SLv5znnwKAjBv4JHSUEEZECWrwYRo/2pm3boFy2\nQvjy5aFbN3j0Ue9EDrBuHXTp4q23aBHUrg0+H2zfDlu2wLJl3on/44+9n2bQtKmXHDp2hBYtivbz\nqKeyiEg++HywcqV3ov7tN/jyS9ixAzp1gs6dvRO3y9ZneN06ePNNGDEC/vIXaNUKXnoJnnwS/u//\nQlNMFOqeykoIIiLZ+HyQkgJLlngn/0PT0qVQq1ZWcU6bNtC6dc67gtzs2QMjR8KUKfDcc9C8eehi\nVUIQkVItNTXnidjng7//HS69tPD7XrIEYmNh/vyc8w8e9Cp5t26FtDSvovfCC70T/6Eim0aN4NRT\nCx9DKCkhiEipkZwMP/6Ys+J0zx5o3DjrRLxvH7z1FtSpA716wa23HlncsmYNTJ3qTfHxcMopOStn\n16zxEkFqqlfEEx2dcx/ly3uVulFRXjIoX0JqV5UQRCQs0tO9q/X8XiWbeRWt1arlLFYxg1mz4PXX\nYfZsr+jl0Im7aVPvxP/nYhifDyZM8LZZsQIqVsxalp4Ofj+0betN117rzTuUYBITvRg6d/aKeCKl\niWcoKCGISLEyg3HjvKvzHTugZs2sq/fzzvOuqg9dXfv9MGNG1tX67t1eM8tGjbxt6taFL77wmmj2\n6gX33QcnnxxcPOvXQ0ZG1vvy5b3WOi5kp8WSQwlBREJu715YuBDOOsu7Qj90cl29Gh5+2GsxM2wY\nXH55VkubRYtg1Sqv3D0lxZsyM+Gaa7Ku1hs0gF27vOaZiYles8rrroPrr8+7MlbypoQgIoXm98O8\neVlX8r/8AhdcAJs3e1fvjRt7V/PffQdPPeVdzVeoEO6o5c+UEESkQMy8q/rRo+HTT+G006B9e+9K\nvnXrrLqBQ618kpK85XXrhjduOTolBBHJt/R0mDPHuwuYNMkrGrrnHm9q3Djc0UlhKSGISK4yM70y\n/0Pl+3PmwE8/eSf+tm2hQwe44gqV3ZcmSggiZZwZjBrldbJKSfEqdbds8Sp7q1fPagHUsqXX3r5S\npXBHLEVFCUGkDDt4EHr0gN9/h7vvzmruWaMG1Kunk39ZE+qEUEL644nI7t1w553esMozZwbffl8k\nLypNFIkwixbBwIHeaJpr13pFRJs2wdVXe3cB48crGUjRUJGRSIRYvRr69vVGxbzjjqwK4j/+8B60\n8uST0Lt32eyRK7lTkZFIKZKe7tUHjBzp9Q949FF4552cY/WkpnrTeeeFL04pG5QQRIrZF1/A5597\nV/9r1kD9+tCundcRrHr1I9evWtWbRIqaioxEiomZ98Ss4cPhhRegWTNvuAgNCSEFpSIjkRLI5/MG\niZs71+ssVrNmuCMSOZISgkgR27sXYmK8PgSzZuWsHxCJJGp2KlJEDh6ETz7xegxXqwZffaVkIJFN\ndwgihRAX57UQql8/66lfUVHe0BJvv+09l3fAALjhBjUXlcinSmWRAli/Hh55BJYuhaef9p4jcOhx\njWvXej2KH3/cqzgWKSqqVBYJo/R0r5/ASy/BY495zUdPOCHcUYmEhhKClCmZmcd+yLrPl/N5vWZe\n/4CpU2HaNG9I6auv9loKNWhQ9PGKFCcVGUmpl5bmdQaLjfVa+ZxyStYooVWreoPGHRpGetcub5iI\n7M45J+sZwddcA5Urh+VjiBxBw1+L5GHr1qzy/Ph4mDHDe7D7Pfd4lbvp6VkPhk9N9R4lGRXlTVWq\n6AEyUnIoIYjk4rffYPBg+PZbOHAgq8XPZZfBrbfqOQFSOikhiAT4/fDNN/D667BsGfzzn9C5M9Su\nrSaeUjaolZGUKXv2wOLFXvHP4sWwcWNWcc+WLV7F7hNPwF13aUwgkcLSHYJElJQUmD7da9Uzc6bX\nvv/CC73nBDdu7F39H3pkZFSUV8GruwEpq1RkJKWOzwcffghDhniduqKjvRY9117rjQZ6rGaiImWZ\nioyk1DDzHgf5zDNwxhlepXDr1lBef5UiYaF/PSkWu3Z5Fb+Hyv9TUmDCBK+j2BtveA+IUdGPSHip\nyEiKTHo6fP211yFs2jSvAvhQe/8aNeDSS+H229XuX6SgVIcgES0z0+sIFhsLEydC8+ZeU9A77lAP\nX5FQU0KQiDR/Pnz8MXz2GZx5ptcrOCYGatUKd2QipZcqlSWiJCZ6lcILFkC3bt7dwQUXhDsqESkI\nJQQ5puXLYfRob9z/hg29/gBNmngVwP36weTJ0KcPjBkDJ54Y7mhFpDCUEOQI69Z5zUFjY2HDBujY\nEW66yUsKI0Z4dwU7dng9hFes8AaHE5GST3UIZVxGhtcUdO5cr3fw1Kmwc6c3Kmjnzl7nsNz6BZip\nmahIuKlSWQrs0GBw774Lq1Zljf9ftSpcfHHWmP9NmqgpqEhJoEplCdrevd7QEG+8ARUreo9+bN7c\n6wtQpYqGhhART76uA51zHZxzSc655c653rksP805F+ecW+icS3TO3Z/fbaXobNjgPQD+7LO9oqD3\n34eEBOjSBRo1gurVlQxEJEueCcE5Vw54C2gPNAI6Oef+3LDwn8ASM7sIuBZ4zTlXPp/bSoj98ovX\nD6BpU9i/36sfGD/eGydI5f4icjT5uUNoCawws7VmlgF8Btz6p3UMqBh4XRFINTNfPreVEFm40KsM\n/utfoUULWL3aKyaqVy/ckYlISZCfhHAmsD7b+w2Bedm9BTR0zm0CfgMeC2JbKaSVK6FTJ7j+erjx\nRq8p6P/9n4aKEJHghKpSuT2wwMz+4pyrB0xxzjUNdif9+vU7/Do6Opro6OgQhVd6TJ3q9QY+NGJo\nSop3J9CrFwwfDqeeGu4IRaSoxMfHEx8fX2T7z7PZqXPucqCfmXUIvH8aMDPrn22dr4CXzWx24P00\noDdewjnmttn2oWanx7BvHzz5pNds9MEHs0YNjYryhorQ3YBI2ROOZqcJQH3n3NnAZiAG6PSnddYC\nbYHZzrko4DxgNbArH9tKHubP9zqJtWgBv/0GlSqFOyIRKY3yTAhmlumcexiYjFfn8IGZLXXO9fQW\n23vA/4BRzrlFgc3+ZWY7AHLbtig+SGlkBq++CgMHepXDnZRKRaQIqadyhNqzxxs9dMMG+Pxzry+B\niEh2oS4y0gAFEWjFCrj8cjj9dJg5U8lARIqHEkIE8fu9p4y1auUNLzF8OJxwQrijEpGyQmMZhdna\ntVmjjE6bBtWqwaRJcMUV4Y5MRMoa3SGEye+/e88ZvuQSLxFcd503ztDvvysZiEh46A6hmK1d6z1p\n7Ouv4V//8h5Cc9JJ4Y5KRER3CMVm2zavN3Hz5nDWWV7F8ZNPKhmISORQQihie/bAc895vYl9Pliy\nBF54QZ3LRCTyKCEUkQMHvM5kDRp4g88lJMCbb8IZZ4Q7MhGR3KkOIcQyM+Hjj6FvX+95BJMnez9F\nRCKdEkKImHl9CJ591nss5ejRXn8CEZGSQgkhBGbM8B5VmZ4OAwZ4D6nRk8lEpKRRQiiE+fOhTx9Y\ntcqrKO7YEcqpVkZESiidvgpo1izo0AFuu83rTNapk5KBiJRsGu20AJKS4JprvHqCNm3CHY2IlFUa\n7TTMUlK8OoL+/ZUMRKR0UUIIwr59cMst0KUL3H9/uKMREQktFRnlk88Hd90Fp50Go0apFZGIhF+o\ni4yUEPLhjz+8FkQAEyZAhQrhjUdEBFSHUOxSUiA62htyYuJEJQMRKb2UEICMDHj+efjrX+Htt2HZ\nMq/n8fLlcOWVcPPN8P77cPzx4Y5URKTolPkio5UroXNn7/nF99wD8fEwZYq37OBBePlleOCBYg9L\nRCRPqkMIETMYMcIbcuI//4GHH87qWGbmPa/gwAFo0qTYQhIRCYoSQgisX+8lgDVrvCeWNW5cLIcV\nEQkpVSoXgs8HgwbBxRdDixYwb56SgYjIIWVmcLt58+Bvf4Nq1eCnn7wH14iISJYyUWS0YoXXWmjw\nYK/iWJ3KRKQ0UB1CkDIy4Kqr4N574ZFHQr57EZGwUR1CkF54wWtS+vDD4Y5ERCSyleo6hNmz4b33\nYMECFROJiOSl1N4h7N7tjUr67rtQs2a4oxERiXylsg7BDLp2hRNP9O4QRERKo1DXIZS6IiOfz6sv\nWLwYfvgh3NGIiJQcpSoh7N0LMTFey6KZM+GUU8IdkYhIyVFq6hC2boVrr/U6nn35JVSsGO6IRERK\nllKREBISvI5n11/vDVinYapFRIJXoouMdu2CZ56BcePg9dehU6dwRyQiUnKVyDsEM/j8c2jY0Htm\nwe+/KxmIiBRWiblD2LoVpk+HqVNh2jSvjmDsWK+oSERECi/i+yHs3w/dusF338HVV0Pbtt504YXq\nfSwiZVuZ6oeQmuo9z7huXe9h9yecEO6IRERKr4itQ0hO9oqDrr4aPv5YyUBEpKhFZEKYNw9atYJH\nH4VXXsl61rGIiBSdiCoymjbNaz46b543BtFtt4U7IhGRsiOiKpUbNjQef9x7mM1JJ4U7IhGRyFaq\nn5jm95taDomI5FOpfmKakoGISPhEVEIQEZHwUUIQERFACUFERAKUEEREBFBCEBGRACUEEREBlBBE\nRCQgXwnBOdfBOZfknFvunOudy/InnXMLnHPznXOJzjmfc65yYNka59xvgeXzQv0BREQkNPLsqeyc\nKwcsB9oAm4AEIMbMko6y/k3A42bWNvB+NdDCzNLyOE6uz0MQEZHchaOncktghZmtNbMM4DPg1mOs\n3wn4NNt7l8/jiIhIGOXnRH0msD7b+w2BeUdwzp0EdAC+yDbbgCnOuQTnXI+CBioiIkUr1MNf3wz8\naGY7s81rZWabnXPV8RLDUjP7MbeN+/Xrd/h1dHQ00dHRIQ5PRKTkio+PJz4+vsj2n586hMuBfmbW\nIfD+acDMrH8u644HxpjZZ0fZV19gj5kNymWZ6hBERIIQjjqEBKC+c+5s51wFIAaIyyWwSsA1wKRs\n8052zp0aeH0K0A5YHIrARUQktPIsMjKzTOfcw8BkvATygZktdc719Bbbe4FVbwO+N7P92TaPAiY4\n5yxwrFgzmxzajyAiIqEQUQ/IiZRYRERKglL9gBwREQkfJQQREQGUEEREJEAJQUREACUEEREJUEIQ\nERFACUFERAKUEEREBFBCEBGRACUEEREBlBBERCRACUFERAAlBBERCVBCEBERQAlBREQClBBERARQ\nQhARkQAlBBERAZQQREQkQAlBREQAJQQREQlQQhAREUAJQUREApQQREQEUEIQEZEAJQQREQGUEERE\nJEAJQUREACUEEREJUEIQERFACUFERAKUEEREBFBCEBGRACUEEREBlBBERCRACUFERAAlBBERCVBC\nEBERQAlBREQClBBERARQQhARkQAlBBERAZQQREQkQAlBREQAJQQREQlQQhAREUAJQUREApQQREQE\ngPLhDkBEBGB/xn6+XvE1v2/7Pcf8y868jPb124cpqrJFdwgiEjaZ/kymrJrC/RPvp9agWrz767tk\nZGbg8/vw+X2k+9LpPL4z+zP2hzvUMkF3CCISNveMv4flqcvp2qwrL7d5mZoVax6xzm8pvzFmyRi6\nXtQ1DBGWLc7Mwh0DAM45i5RYRKTobdi9gaZDm7Ku1zpOrXDqUdeLWxbHyz++zE8P/lSM0ZUMzjnM\nzIVqfyoyOga/+cMdQpE4mHmQPQf25JiUjKW4fTD/A2IaxxwzGQDc0OAGNuzewKKURcUUWfEI9vxi\nZqTtTyuiaDz5SgjOuQ7OuSTn3HLnXO9clj/pnFvgnJvvnEt0zvmcc5Xzs22k+jTxUy4dfik+vy/c\noYTU7gO7qT+kPrUG1To8Rb0axYVvX8jzM59n5Y6V4Q5RygCf38fw+cPp2aJnnuuWL1ee7hd3591f\n3i2GyIrH5j2bOXvw2Xyz4pt8rb9933buGHMHj3z7SJHGlWeRkXOuHLAcaANsAhKAGDNLOsr6NwGP\nm1nbYLaNpCKjvQf3cv5b53NqhVN57LLH+Pulfw93SPm2dudapidPp9vF3XJd3mdqHzb/sZlRt406\nPM/MmLdxHrGJsXy+5HPOqXwOLWu1xLmsO9GoU6K4u9HdNKjaoKg/guTD0IShnHXaWbSv354Kx1UI\ndzhBC7YYKL/FSyWB3/zcEHsDJx1/EnM3zGXhQwupcUqNo64/edVkuk3qRqfGnXjxLy9yQvkTDi8L\ndZFRfhLC5UBfM7s+8P5pwMys/1HWjwWmm9kHwWwbSQnhufjnSEpNoner3rT/pD3LHl5G5RMrhyWW\njMwMypcrn+PkfDSb92ym9cjWpO5P5ePbP+am827KsXzNzjW0eK8FiX9PpFbFWrnuw+f3MT15Oknb\nc+bslTtWMmbJGOpUqsM9Te4hpnEMZ5x6RsE/mBTYxt0baTy0MY1rNGbptqXc2fBOOjfpzFV1rsrX\n30kkuHH0jdzd8O6gKopv++w2bjrvJro3716EkeVPRmYG5Vw5jit3XK7LzQyf38fxxx1/xLIhc4cQ\nmxjLj91+5D8z/sOSbUuIi4k74neX7kunz9Q+jFs6jlG3jqLNuW2O2FeoEwJmdswJ+CvwXrb39wJD\njrLuSUAqULkA21ok2LBrg1XtX9XWpK0xM7MHJj5gT01+KmzxXDzsYus4tqPt2LfjmOtt37vdGr3d\nyF6c9aLNXDPTznj1DNuyZ0uOdTqO7WjPxT9X4FgyMjNs8srJ1nVCV6v8SmVr+1FbG7lgpO3cv7PA\n+zQz27l/p907/l6r+FJF+3Dhh+b3+wu1v9Lu1dmv2gMTHzAzs+S0ZHv5h5etwZAG1vPLniXiu0tO\nS7aq/avavoP7gtrum+Xf2CXvXVJEUeWf3++36z66zmq+WtN6fdfLEjYmHP7el21fZn1n9LUGQxrY\n6a+cbmMWj8mxbWJKolUbUM1WpK4wM7MDvgPW/N3mNjRhaI71Fm1ZZE3eaWJ//fyvlrov9aixBM6b\neZ7H8zuFutnpzcCPZrazIBv369fv8Ovo6Giio6OD3kdGZgZTVk/h6+Vfk+5LPzy/wnEV+O81/821\nWVt2/57+b3q26MnZlc8G4H9/+R+NhzbmoUse4tzTzw06nsJYv2s963evp1XtVlz07kV8eNuHRJ8T\nfcR6ew7s4frY67mxwY30uaoPzjm6XdSNB+Ie4KtOX+GcY876OcxeP5sPbvmgwPGUL1ee6+pdx3X1\nrmN/xn6+Wv4VoxeP5rHvHqND/Q680uYV6p5eN6h9/rjuR7pM6EKHeh34/t7v6f5ld75e8TXDbhzG\n6SedDngXLT9t+Im4ZXE8dtljef4OS7vYxFgGXjcQgHMqn8PTVz3NPy/9J20+akPvqb3p37Z/UHcK\nmf5MpidPJ25ZHPsy9h2eX75ceZ6+6umgf6d5eX/++3Ru0pmTjj8pqO3a1WvHP775B79u+pUWtVqE\nNKZgfLX8Kzbs3sDkLpMZu2QsMeNiOK7ccVSsUJGNezbSsVFHYu+IxTDuHX8vX6/4miHXD+GE406g\n8/jO9G/bn/pV6gPeeSn2jliuGnEV0edEc17V8xgydwgv/vAiA68bSNdmXXP8LuPj44mPjy+yz5bf\nIqN+ZtYh8P5YxT7jgTFm9lkBtrW8YjnEzFizcw1G1vobd2/k08WfMvb3sZxX9TzuuOCOHMU8P234\niXW71vHdvd9RzuVel/7Lpl+45dNbWPbwMiqeUPHw/P/N+h8Ltyxk3N3j8hVfqAz/dTjxa+OJvSOW\nb1d8y4NxD9KlaRf+1uJvh/9IMv2Z9PiyBxdWu5B3bnzn8PyDmQe58oMreeDiB3jokoe44oMrePjS\nh+nSrEvI40zbn8awX4Yx6OdBDGo3iHub3pvnCelg5kGen/k8789/n+E3D+fm828GvN6qvaf2ZmLS\nRAZcN4DElERGLx7NSeVPol6VehzMPMi3nb896u+wtFu6bSltPmrD+l7rjyiuSN2XSvSH0cQ0iuGZ\nq5/Jc18JGxMO1xudddpZ3HnhnVQ7udrh5YtSFjF341x+6PZDrkUfBZGRmUGdwXWYdt80GlZvGPT2\nL/3wEslpyQy/ZXhI4gnWwcyDNBnahMHtB3N9g+uBrDq4vRl7ufrsqylfLus6+4+Df/DE908wLXka\nl9S6BJ/fx7i7xh3x/zE0YSjD5w+n+inV2X1gN5/c/gn1qtTLM55wFBkdB6wEzgYqAAuBC3NZrxJe\ncdFJwW5rQRYZPTPtGavav6rVHVz38HTxsIvtxVkv2uodq3PdJiMzw654/wp7/afXc13u9/vtqhFX\n2fBfhx+xbN/BfVZ7UG2buWZmvmMMhTs+v8M+WvjR4fcpf6TYXWPuyvG56w6uaz2/7GmZ/swjtk/a\nlmRV+1e1/0z/j13y3iW5rhNKCzcvtIZvNzxqEVemP9NmrZllPb/saVX7V7WbR99sm/dsznVf3yz/\nxi5//3J78vsnbcHmBeb3+y0jM8MuG36ZDf5pcJF+jkj27LRnrdd3vY66fNPuTVZ/SH0b8vOQo66z\nK32X3TfhPqvzeh3rO6OvJW1LynU9v99v7T9ub/+d/t9Cx33IuCXjrPWI1gXefsueLXbma2fa5e9f\nbkN+HnJEsWhRG/zTYGv3cbugi+bG/z7eokdF2/a923Nd7vf7rdvEbtZ3Rl/LyMzI934JcZFR/laC\nDsAyYAXwdGBeT+Bv2dbpCozOz7ZHOUa+voDktGSr0r+Kbdi1Id9f2iGrdqyyagOq2aIti3LM9/v9\n9sbPb1izoc3Ml+nLddvYRbHW/N3mQf2yCuOg76BVerlSof/ghyUMM/phP6z9IUSRHdu+g/vskW8e\nsdqDalvMuJjD091j77Y6r9exRm83spdmvWTJackF2v+K1BW5/g6LwpKtS+yZac/k+Bwx42Lsw4Uf\nFnifGZkZNnD2QJuyakrQ2/r9fjv3jXPtl42/HHO95LRkqz2otj01+Slbum1pjmWz1822uoPrWo+4\nHrbnwJ48j7lp9yaLGhhls9fNDjreP0vbn2Yth7e02EWxhdpPRmaGfbviW+syvotVfqWytf+4vX24\n8EPbnb77iHUXpyy2Z6c9ayMXjCx0/UrqvlSrPqC6JaYkFmo/oRTqhFDieip3+qITF1S9gL7RfQt0\nnFELR/HaT6+R0COBE8ufSOq+VB76+iGSticx5s4xXFj9wly3MzPaf9KeK2tfSb/ofgU6djBmrZ3F\nE98/wS9/+6VQ+zEzft38K5fUuiREkeXPzxt+JjktOce8RjUa0TSqaaH3PWLBCAb/PJh5PeZxYvkT\nC72/7Dbs3sCniZ8SmxjLtn3b6NS4E81rNsfh3ZUfyDzAE98/wcpHV1LlpCpB7Ts5LZl7J9xLOVeO\nZduXMe7ucVx99tX53v7nDT/TdWJXkv6ZlGeR3Jqda3hz7pt8tuQzok6JonOTzuxM38nw+cMZdtMw\nbrvgtnwfd1LSJHp934uFDy3ktBNOy/d22c1aO4v7JtzHjQ1uZHCHwSErgtqXsY+4ZXGMThzNzLUz\n6VC/A3c3vJtVaasYnTia7fu207FRR6YlT6Pu6XUZfvPwHMViwXj8u8c54DvA0JuGhiT2UCj2IqPi\nmsjHHcKcdXPszNfOtD8O/JHP/Hkkv99vd4650x7/9nGbsmqKnTXoLHv828dtf8b+PLfduHujRQ2M\nsjnr5hT4+PnVZ2ofe2baM0V+nJLI7/fbHZ/fccyik2Ck7ku19355z64ZeY2d/srp1n1Sd5u+evpR\n7xa7TewWVGstv99vHy780KoNqGavzn7VMv2ZNnXVVKs+oLolbEzI934e+eaRoFuJ+TJ9Nm31NHtw\n0oPWcWxH27R7U1DbH9Ijrod1ndA16O0O+A5Yn6l9rOarNe2rZV8V6Nj5tX3vdhuWMMzaftTWesT1\nsBnJMw7/DtMz0u3J75+0Wq/Vsu9Xfh/0vpO2JVm1AdVs6x9bQx12oVBW7xD85ufKD67kH5f+g/ua\n3VeoY+3Yv4Nmw5phZoy4dQTt6rXL97YTlk7gySlPsrDnwhwVz6F28bsX89b1b9GqTqsiO0ZJlrov\nlYvevYiWZAncAAALG0lEQVRmUc2O2hYc4NJal/Ls1c/muszn99FtUjfilsXRrl47OjfpzPX1r8/R\n8Sc3y7Yvo/XI1iQ/lswpFU7JsWx/xn4e/uZhtu/fniPWtPQ0Rt8xmmZnNDs8f1LSJHp+1ZNp902j\nUY1Gxzymz+/jzEFnMvuB2YdbqBSnvQf3cvG7F3Njgxt5sPmDNK7ROM9t9mfsJ/rDaKqfXJ0Rt444\nZuer4jI9eTr3T7yfa+teS7eLunH12Vfn2UAhbX8at39+Ozc2uJGnWj1VTJHmT7F3TCsueSWE0Ymj\nef3n15nbfW5IWpgkpyVT6cRKQd/2A3SP606mZTLy1pFBbXdoDKGqJ1c95nqb92ym4TsN2fbUthwt\nFiSn5LTkY45vYxi9p/bm+ejn6di44xHL+8X3Y876OYy9ayyVTqwU1LHvHHMnreu05rHLH8sx/5Fv\nHmH97vV0uyirp/hx5Y6jTd02uTazjF0US++pvRl12ygqVsi6wKh6ctUcJ/7vV37Pf+P/y9zuc4OK\nM5TW7lzLOwnv8OniT6l8YmU6N+nM/RfdT9SpUbmu/+KsF/l18698cfcXEdVhLm1/Gu/Pf5/YxFhS\n96cS0yiGzk070yyq2RFxzkieQdeJXbn9gtsZ2G5gxPUKL5NFRnsP7rXag2rbrDWzgrmbKjJ7Duyx\n+kPq29glY/O9zQHfAbsh9gY7/83z7aDv4DHXHblgpN055s7ChilmlrAxwaoPqG7rdq7LMX/OujkW\nNTCqwEUoCRsTrPag2nbAd+DwvG+Wf2N1Xq9jafvTgtrXiPkjrOXwljmmmq/WtIuGXWQDfhxg63et\nty7ju0RM66pMf6bNXDPTuk3sZue/eb7tPbj3iHU27d5kVftXtVU7VoUhwvxbnLLY/j3133bO4HPs\nwrcutBdmvmCrdqyy9Ix0e2ryU1brtVr23Yrvwh3mURGOVkbFMR0rIfSd0TfiTpBzN8y1GgNr5Kv1\nji/TZ3ePvdtu/fRWa/tR22M2CTTzehR/MP+DUIVa5r0460WLHhV9uDx5d/puO/eNc23C0gmF2m/b\nj9raiPkjzMxrElzz1ZoWnxxf6HjNvL+ZGckzrPuk7lalfxU74YUTjtpEN5zuHX+vPfTlQ0fMD3cP\n/2D5/X6bvW62/eOrf1j1AdWt+oDqduunt0ZcncGflbmEcOjEu37X+gJ/aUUlLinOogZG2bPTnj3q\nVb/f77cHJz1obT5sY/sz9ltiSqJVH1D9qENR+DJ9BW5WK7nzZfqs9YjW1v/H/mZmdv/E+637pO6F\n3u+01dPs/DfPN1+mz24efbP1ntK70PvMTXpGui3ZuqRI9l1YO/fvtHMGn2NxSXGH5y3YvMCiBkYV\nekiTcDnoO2i/bfmtRAwDUqYSQkGKZorb5j2brcMnHazl8Ja2fPvyHMv8fr/1+q6XXf7+5TnafPf8\nsqc9/u3jue5vzro51nRo0yKNuSxak7bGqg2oZv+Z/h9rMKRBvtrg58Xv91vL4S3t9s9ut+bvNs9R\nfFSW/LD2h8NjZ/n9frt21LX2zrx3wh1WmRDqhBDRlco94nrgM1/QlbfFzcx4O+Ftnpv5HA2qZA0P\nne5LJ9Myie8af3hcHoCUP1Jo9E4j5jw4h/OqnpdjX31n9CXdl07/63IdTFYKIXZRLF0ndmXOg3No\neWbLkOxzYtJE7vniHub3nM8F1S4IyT5LomenP8uCLQvo0bwHz05/loUPLVSDiGJQZloZFVfzzlA6\nNBhddo1rNM61M0//H/vz04afmBgz8fC8A74DXDniSl697lWurXttkcdbFm3as+moQ38XhJmxde/W\no7a0KSsyMjNoNaIVv2/7nS/u/oL29duHO6QyoUwkhE17NtH83eaM7zieK2tfGebIika6L52Gbzdk\n+M3DKefKEZsYy4SkCbQ8syWTYiZFXPM2kbys3LGSTxZ9Uiw9+cVTqhNC06HesAbb9m6jR/MePHft\nc2GOqmiNXTKWjuM60uyMZnRu0pmYxjGcddpZ4Q5LREqIUp0QFm5eCHgdeRpVbxRRnVmKSqiLMESk\n7CjVCSFSYhERKQlCnRDK5lNGRETkCEoIIiICKCGIiEiAEkIQivLh1qGkOENLcYaW4oxcSghBKCl/\nIIoztBRnaCnOyKWEICIigBKCiIgERFQ/hHDHICJS0pTKjmkiIhJeKjISERFACUFERAKKJSE4585y\nzk13zi1xziU65x4NzD/dOTfZObfMOfe9c65Stm36OOdWOOeWOufaFVOcJzjn5jrnFgTi7BuJcQaO\nW845N985FxfBMa5xzv0W+D7nRXCclZxzYwPHXeKcuyzS4nTOnRf4HucHfu5yzj0aaXEGjtvLObfY\nObfIORfrnKsQoXE+Fvg/j6hzknPuA+dcinNuUbZ5QcflnGse+B0sd84NztfBQ/n4taNNwBnARYHX\npwLLgAuA/sC/AvN7A68EXjcEFgDlgXOAlQTqO4oh1pMDP48DfgZaRmicvYBPgLjA+0iMcTVw+p/m\nRWKco4BugdflgUqRGGe2eMsBm4DakRYnUCvwe68QeP850DUC42wELAJOCPyvTwbqRUKcwFXARcCi\nbPOCjguYC1waeP0N0D7PYxfnH3K2DzcRaAskAVGBeWcASYHXTwO9s63/LXBZMcd4MvALcGmkxQmc\nBUwBoslKCBEVY+BYyUDVP82LqDiB04BVucyPqDj/FFs74IdIjBMvIawFTg+cpOIi8X8duBMYnu39\ns8BTwNJIiBM4m5wJIajvL7DO79nmxwBD8zpusdchOOfOwct+P+N9wBQAM9sC1AisdiaQ/VmUGwPz\niiO+cs65BcAWYIqZJURgnK/j/fFmbyIWaTGCF98U51yCc657hMZZF9junBsZKI55zzl3cgTGmV1H\nYHTgdUTFaWabgNeAdYFj7jKzqZEWJ7AYaB0oijkZuAHvjivS4jykRpBxnQlsyDZ/A/mIt1gTgnPu\nVGAc8JiZ/UHOExq5vC92ZuY3s4vxrsJbOucaEUFxOuduBFLMbCFwrPbHYf8ugVZm1hzvn+2fzrnW\nRNB3GVAeaA68HYh1L95VV6TFCYBz7njgFmBsYFZExemcqwzcineFWws4xTnXOZe4whqnmSXhFcNM\nwStOWQBk5rZqccYVhCKJq9gSgnOuPF4y+NjMJgVmpzjnogLLzwC2BuZvxMvWh5wVmFdszGw3EA90\nILLibAXc4pxbDXwK/MU59zGwJYJiBMDMNgd+bsMrJmxJZH2X4F05rTezXwLvv8BLEJEW5yHXA7+a\n2fbA+0iLsy2w2sx2mFkmMAG4MgLjxMxGmtklZhYN7MSr24y4OAOCjatA8RbnHcIIvDKtN7LNiwPu\nD7zuCkzKNj8m0DqhLlAfmFfUATrnqh2qvXfOnQRch1emGDFxmtm/zayOmZ2LVy443cy6AF9GSowA\nzrmTA3eEOOdOwSv3TiSCvkuAwG34eufceYFZbYAlkRZnNp3wLgQOibQ41wGXO+dOdM45vO/z9wiM\nE+dc9cDPOsDteMVwkRKnI2cJQFBxBYqVdjnnWgZ+D/dl2+boirryJlCh0Qrvdmwh3q3ZfLwr7yrA\nVLzMPBmonG2bPng15kuBdsUUZ5NAbAvxWiA8E5gfUXFmO/Y1ZFUqR1SMeGXzh37ficDTkRhn4LjN\ngIRAvOPxWhlFYpwnA9uAitnmRWKcfQPHXAR8CBwfoXHOwqtLWABER8r3iZeYNgEH8BJsN7xK+qDi\nAloE/vdWAG/k59gaukJERAD1VBYRkQAlBBERAZQQREQkQAlBREQAJQQREQlQQhAREUAJQUREApQQ\nREQEgP8HzsH2Pap0P7UAAAAASUVORK5CYII=\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x1204a5ad0>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "plt.plot(estimator_arr, training_arr)\n",
+    "plt.plot(estimator_arr, test_arr)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "62\n",
+      "820\n"
+     ]
+    }
+   ],
+   "source": [
+    "print np.argmax(np.array(test_arr))\n",
+    "print estimator_arr[np.argmax(np.array(test_arr))]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "AdaBoostClassifier(algorithm='SAMME.R', base_estimator=None, learning_rate=1,\n",
+       "          n_estimators=820, random_state=None)"
+      ]
+     },
+     "execution_count": 152,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ada1 = AdaBoostClassifier(n_estimators=estimator_arr[np.argmax(np.array(test_arr))], learning_rate=1)\n",
+    "ada1.fit(trainingX, trainingY)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "prediction1 = ada1.predict(test_data)\n",
+    "\n",
+    "f = open(\"AdaBoostDecisionTree.csv\", \"w\")\n",
+    "f.write(\"Id,Prediction\\n\")\n",
+    "for x in range(len(prediction)):\n",
+    "    f.write(str(x+1) + \",\" + str(int(prediction1[x])) + \"\\n\")\n",
+    "f.close()"
    ]
   },
   {
