Best Model Update

--- a/Joon_Models.ipynb
+++ b/Joon_Models.ipynb
@@ -939,7 +939,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Current Winning Model Ensemble"
+    "## 2nd Best Model Ensemble"
    ]
   },
   {
@@ -1321,12 +1321,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   },
   {
