--- a/Advith_Models.ipynb
+++ b/Advith_Models.ipynb
@@ -94,30 +94,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 46,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "ename": "ImportError",
-     "evalue": "cannot import name Dense",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-6-e1ead23bf727>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mkeras\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmodels\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mSequential\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mkeras\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlayers\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mDense\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mDropout\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mActivation\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mkeras\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0moptimizers\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mSGD\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mImportError\u001b[0m: cannot import name Dense"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from keras.models import Sequential\n",
-    "from keras.layers import Dense, Dropout, Activation\n",
-    "from keras.optimizers import SGD\n",
+    "from sklearn import svm\n",
     "import numpy as np\n",
     "\n",
     "# CONSTANTS\n",
+    "loss = [\"hinge\", \"squared_hinge\"]\n",
+    "penalty = [\"l1\", \"l2\"]\n",
     "TRAINING = 3351\n",
     "RUNS = 3000\n",
     "\n",
@@ -128,25 +116,19 @@
     "testX = data[TRAINING:, 0:-1]\n",
     "testY = data[TRAINING:, -1]\n",
     "\n",
+    "test_data = np.loadtxt(\"testing_data.txt\", delimiter=\"|\", skiprows=1)\n",
     "\n",
-    "model = Sequential()\n",
-    "model.add(Dense(64, input_dim=20, init='uniform', activation='relu'))\n",
-    "model.add(Dropout(0.5))\n",
-    "model.add(Dense(64, activation='relu'))\n",
-    "model.add(Dropout(0.5))\n",
-    "model.add(Dense(1, activation='sigmoid'))\n",
+    "clf = svm.LinearSVC(dual=False, tol=1e-6, max_iter=1000, random_state=0)\n",
+    "clf.fit(trainingX, trainingY)\n",
+    "clf.score(testX, testY)\n",
     "\n",
-    "# \"class_mode\" defaults to \"categorical\". For correctly displaying accuracy\n",
-    "# in a binary classification problem, it should be set to \"binary\".\n",
-    "model.compile(loss='binary_crossentropy',\n",
-    "              optimizer='rmsprop',\n",
-    "              class_mode='binary')\n",
+    "prediction = clf.predict(test_data)\n",
     "\n",
-    "model.fit(trainingX, trainingY,\n",
-    "          nb_epoch=20,\n",
-    "          batch_size=16,\n",
-    "          show_accuracy=True)\n",
-    "score = model.evaluate(testX, testY, batch_size=16)"
+    "f = open(\"svm.csv\", \"w\")\n",
+    "f.write(\"Id,Prediction\\n\")\n",
+    "for x in range(len(prediction)):\n",
+    "    f.write(str(x+1) + \",\" + str(int(prediction[x])) + \"\\n\")\n",
+    "f.close()\n"
    ]
   },
   {
@@ -156,9 +138,7 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "from keras.models import Sequential"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -186,7 +166,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "version": "2.7.11"
   }
  },
  "nbformat": 4,
