joon final update

--- a/Joon_Models.ipynb
+++ b/Joon_Models.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -452,24 +452,6 @@
     "\n",
     "# XGBoost"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -1135,14 +1117,26 @@
    "outputs": [],
    "source": [
     "param_dist2 = {\n",
-    "    'max_depth': sp_randint(1, 15),\n",
-    "    'learning_rate': [0.3, 0.2, 0.15, 0.1, 0.05, 0.01, 0.005, 0.001],\n",
-    "    'colsample_bytree': sp_uniform(0.3, 0.55),\n",
+    "    'max_depth': sp_randint(3, 15),\n",
+    "    'learning_rate': [0.3, 0.2, 0.15, 0.1, 0.05, 0.01],\n",
+    "    'colsample_bytree': sp_uniform(0.4, 0.55),\n",
     "    'min_child_weight': sp_randint(1, 10)\n",
     "}\n",
     "\n",
     "xg = XGBClassifier(n_estimators=500)\n",
-    "xg_grid = RandomizedSearchCV(estimator=xg, param_distributions=param_dist2, n_iter=n_iter_search, cv = 5, n_jobs=-1)"
+    "xg_grid = RandomizedSearchCV(estimator=xg, param_distributions=param_dist2, n_iter=n_iter_search, cv = 5, n_jobs=-1, verbose=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import datetime\n",
+    "datetime.datetime.now()"
    ]
   },
   {
@@ -1198,7 +1192,7 @@
     "#    'n_estimators': sp_randint(5, 15),\n",
     "#    'learning_rate': sp_uniform(0, 1)\n",
     "#}\n",
-    "adarf = RandomForestClassifier(n_estimators=500, max_features=65, criterion='entropy', min_samples_leaf=2, n_jobs=-1)\n",
+    "adarf = RandomForestClassifier(n_estimators=10000, max_features=65, criterion='entropy', min_samples_leaf=2, n_jobs=-1)\n",
     "ada = AdaBoostClassifier(base_estimator=adarf, n_estimators=10)\n",
     "\n",
     "#ada_grid = RandomizedSearchCV(estimator=ada, param_distributions=param_dist_adrf, n_iter=30, cv = 5, n_jobs=-1)"
@@ -1305,7 +1299,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Models and Ensembles for Submission"
+    "## Models and Ensembles for Submission"
    ]
   },
   {
@@ -1321,9 +1315,76 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 291,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- 24.11 mins ---\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 291,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# RF with 100000 trees\n",
+    "start_time = time.time()\n",
+    "rf_sub1 = RandomForestClassifier(n_estimators=100000, max_features=65, criterion='entropy', min_samples_leaf=2, n_jobs=-1)\n",
+    "rf_sub1.fit(dataX, dataY)\n",
+    "print(\"--- %.2f mins ---\" % ((time.time() - start_time)/60))\n",
+    "os.system('say \"Master, your random forest program has finished\"')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 292,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 292,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Predict data and write to file.\n",
+    "rf_sub1_predict = rf_sub1.predict(test_data)\n",
+    "\n",
+    "f = open(\"RandomForest5.csv\", \"w\")\n",
+    "f.write(\"Id,Prediction\\n\")\n",
+    "for x in range(len(rf_sub1_predict)):\n",
+    "    f.write(str(x+1) + \",\" + str(int(rf_sub1_predict[x])) + \"\\n\")\n",
+    "f.close()\n",
+    "\n",
+    "os.system('say \"Master, your file has been created.\"')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# CURRENT BEST MODEL"
+   ]
   },
   {
    "cell_type": "code",
@@ -1354,11 +1415,11 @@
     "# Adaboosted Random Tree\n",
     "start_time = time.time()\n",
     "adarf_sub = RandomForestClassifier(n_estimators=10000, max_features=65, criterion='entropy', min_samples_leaf=2, n_jobs=-1)\n",
-    "ada_sub = AdaBoostClassifier(base_estimator=adarf_sub, n_estimators=10)\n",
+    "ada_sub = AdaBoostClassifier(base_estimator=adarf_sub, n_estimators=13, learning_rate=0.8)\n",
     "ada_sub.fit(dataX, dataY)\n",
     "print(\"--- %.2f mins ---\" % ((time.time() - start_time)/60))\n",
     "\n",
-    "os.system('say \"your adaboost program has finished\"')"
+    "os.system('say \"Your adaboost program has finished\"')"
    ]
   },
   {
@@ -1389,7 +1450,14 @@
     "    f.write(str(x+1) + \",\" + str(int(ada_sub_predict[x])) + \"\\n\")\n",
     "f.close()\n",
     "\n",
-    "os.system('say \"Master, your file has been created.\"')"
+    "os.system('say \"Your file has been created.\"')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Try to Improve"
    ]
   },
   {
@@ -1399,7 +1467,178 @@
     "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "params_ada = {'n_estimators': sp_randint(1, 30), 'learning_rate': [0.1, 0.5, 0.8, 0.01, 0.05]}\n",
+    "\n",
+    "# Adaboosted Random Tree\n",
+    "start_time = time.time()\n",
+    "adarf_sub2 = RandomForestClassifier(n_estimators=100, max_features=65, criterion='entropy', min_samples_leaf=2, n_jobs=-1)\n",
+    "ada_sub2 = AdaBoostClassifier(base_estimator=adarf_sub2)\n",
+    "\n",
+    "ada_grid = RandomizedSearchCV(estimator=ada_sub2, param_distributions = params_ada, n_iter=60, cv = 5, n_jobs=-1)\n",
+    "\n",
+    "\n",
+    "ada_grid.fit(dataX, dataY)\n",
+    "print ada_grid.best_params_\n",
+    "print ada_grid.best_score_\n",
+    "print(\"--- %.2f mins ---\" % ((time.time() - start_time)/60))\n",
+    "\n",
+    "os.system('say \"Your adaboost search has finished\"')\n",
+    "\n",
+    "# Run on Wing IDE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Results from Wing IDE:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- 0.59 mins ---\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Adaboosted Random Tree\n",
+    "start_time = time.time()\n",
+    "adarf_sub2 = RandomForestClassifier(n_estimators=100, max_features=65, criterion='entropy', min_samples_leaf=2, n_jobs=-1)\n",
+    "ada_sub2 = AdaBoostClassifier(base_estimator=adarf_sub2, n_estimators=30)\n",
+    "ada_sub2.fit(dataX, dataY)\n",
+    "print(\"--- %.2f mins ---\" % ((time.time() - start_time)/60))\n",
+    "\n",
+    "os.system('say \"Your adaboost program has finished\"')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Predict data and write to file.\n",
+    "ada_sub2_predict = ada_sub2.predict(test_data)\n",
+    "\n",
+    "f = open(\"AdaBoostRF3.csv\", \"w\")\n",
+    "f.write(\"Id,Prediction\\n\")\n",
+    "for x in range(len(ada_sub2_predict)):\n",
+    "    f.write(str(x+1) + \",\" + str(int(ada_sub2_predict[x])) + \"\\n\")\n",
+    "f.close()\n",
+    "\n",
+    "os.system('say \"Your file has been created.\"')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import datetime\n",
+    "datetime.datetime.now()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### XGBoost"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- 19.30 mins ---\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Try with more estimators\n",
+    "start_time = time.time()\n",
+    "xg2 = XGBClassifier(n_estimators=10000, learning_rate=0.15, colsample_bytree=0.473923, max_depth=9, min_child_weight=5)\n",
+    "xg2.fit(dataX, dataY)\n",
+    "print(\"--- %.2f mins ---\" % ((time.time() - start_time)/60))\n",
+    "\n",
+    "os.system('say \"Master, your adaboost program has finished\"')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Predict data and write to file.\n",
+    "xg2_predict = xg2.predict(test_data)\n",
+    "\n",
+    "f = open(\"XGB1.csv\", \"w\")\n",
+    "f.write(\"Id,Prediction\\n\")\n",
+    "for x in range(len(xg2_predict)):\n",
+    "    f.write(str(x+1) + \",\" + str(int(xg2_predict[x])) + \"\\n\")\n",
+    "f.close()\n",
+    "\n",
+    "os.system('say \"Master, your file has been created.\"')"
+   ]
   },
   {
    "cell_type": "code",
@@ -1416,6 +1655,18 @@
    "display_name": "Python 2",
    "language": "python",
    "name": "python2"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 2
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython2",
+   "version": "2.7.11"
   }
  },
  "nbformat": 4,
